--- a/css/universal-styles.css
+++ b/css/universal-styles.css
@@ -17,16 +17,18 @@
     border-color: #4b9b22;
 }
 
-.page-item.active .page-link
+.page-item.active .page-link:hover,
 .dt-buttons button:hover,
 .btn-primary:hover {
     background-color: #65B53C;
     border-color: #65B53C;
 }
 
-.bg-primary,
-.dt-buttons button:hover {
+.bg-primary {
     background-color: #4b9b22 !important;
 }
-}
+
+.btn-primary:not(:disabled):not(.disabled):active {
+    background-color: #65B53C;
+    border-color: #65B53C;
 }
