--- a/css/universal-styles.css
+++ b/css/universal-styles.css
@@ -28,13 +28,31 @@
     background-color: #4b9b22 !important;
 }
 
+/* Buttons */
 .btn-primary:not(:disabled):not(.disabled):active {
     background-color: #65B53C;
     border-color: #65B53C;
 }
 
+/* Sidebar, Text */
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active,
 .text-primary {
     color: #4b9b22!important;
+}
+
+/* Login page */
+.bg-gradient-primary.login {
+    background: rgb(75,155,34);
+    background: linear-gradient(180deg, rgba(75,155,34,1) 0%, rgba(255,255,255,1) 100%);
+}
+
+.justify-content-center,
+.container {
+    height: 100vh;
+}
+
+.justify-content-center {
+    display: flex;
+    align-items: center;
 }
