--- a/css/universal-styles.css
+++ b/css/universal-styles.css
@@ -56,3 +56,13 @@
     display: flex;
     align-items: center;
 }
+
+.login-form {
+    padding-top: 0!important;
+}
+
+.login-logo {
+    display: block;
+    margin: 0 auto;
+    margin-top: 15px;
+}
