--- a/css/universal-styles.css
+++ b/css/universal-styles.css
@@ -47,8 +47,8 @@
     background: linear-gradient(180deg, rgba(75,155,34,1) 0%, rgba(255,255,255,1) 100%);
 }
 
-.justify-content-center,
-.container {
+.justify-content-center {
+/*.container {*/
     height: 100vh;
 }
 
